--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/estilos.css" />
     <link rel="shortcut icon" href="../img/logo2.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
     <script
       src="https://kit.fontawesome.com/2794029d4a.js"
       crossorigin="anonymous"
@@ -37,30 +43,26 @@
         <img src="../img/logo1.jpeg" alt="" />
         <h1>Indecisa - Indumentaria para todas nosotras</h1>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi aut
-          sed nostrum quaerat facilis maiores facere dicta unde, dolore quo
-          repudiandae libero error veritatis impedit beatae veniam officiis
-          nihil eos doloribus aspernatur neque! Ab ipsum dolorum, consequuntur
-          placeat vero, ipsa laborum, a nisi eveniet ducimus repudiandae totam
-          et omnis optio!
+          Somos una marca nueva, con gusto en la moda y en las nuevas
+          tendencias.
         </p>
-        <h2>Lorem</h2>
+        <h2>Nuestro nombre</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
-          asperiores? In laborum fugit atque et harum eum, aspernatur saepe
-          consectetur veritatis dolores commodi, illum quia.
+          Desde chica que me costaba elegir ropa (creo que a todas nos paso o
+          nos pasa jaja) y siempre me considere muy indecisa a la hora de elegir
+          que ponerme.
         </p>
-        <h2>Lorem</h2>
+        <h2>Horizonte</h2>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam
-          possimus perspiciatis eius modi nulla. Accusamus esse expedita laborum
-          adipisci atque corporis distinctio vel. Nostrum, quis!
+          El horizente de Indecisa es llegar a diseñar ropa para todas nosotras,
+          desde los talles mas chicos a los mas grandes. Considero que todas
+          podemos vestirnos lindas si lo deseamos.
         </p>
       </div>
     </main>
 
-    <footer>
-      <div class="container">
+    <div class="pie">
+      <div class="contenedor">
         <h3>Seguinos en nuestras redes</h3>
         <div class="f__iconos">
           <a href="https://www.instagram.com/indecisa.lp/?next=%2F"
@@ -72,6 +74,11 @@
           ></a>
         </div>
       </div>
-    </footer>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
