--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/estilos.css" />
     <link rel="shortcut icon" href="../img/logo2.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
     <script
       src="https://kit.fontawesome.com/2794029d4a.js"
       crossorigin="anonymous"
@@ -34,46 +40,29 @@
 
     <main>
       <div class="contenido__main">
-        <h2>Lorem ipsum dolor sit amet?</h2>
+        <h2>Hacen envios?</h2>
+        <p>Realizamos envios a todo el pais por medio de correo argentino.</p>
+        <h2>Que medios de pago aceptan?</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate,
-          eius. Reiciendis nulla dignissimos consectetur, eaque aut in
-          voluptate, cum, assumenda dolor libero animi sit id voluptatibus
-          eveniet vitae similique minus.
+          Aceptamos tarjeta credito o debito, transferencia, efectivo o cripto.
         </p>
-        <h2>Lorem ipsum dolor sit amet?</h2>
+        <h2>Donde puedo ver las prendas?</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate,
-          eius. Reiciendis nulla dignissimos consectetur, eaque aut in
-          voluptate, cum, assumenda dolor libero animi sit id voluptatibus
-          eveniet vitae similique minus.
+          Tenemos showroom de Lunes a Viernes de 18 a 20hs y Sabados de 16 a
+          20hs.
         </p>
-        <h2>Lorem ipsum dolor sit amet?</h2>
+        <h2>Tengo un enveto y no se que ponerme</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate,
-          eius. Reiciendis nulla dignissimos consectetur, eaque aut in
-          voluptate, cum, assumenda dolor libero animi sit id voluptatibus
-          eveniet vitae similique minus.
+          No te preocupes, nosotras te ayudamos a que elegias el mejor outfit
+          para esa noche especial.
         </p>
-        <h2>Lorem ipsum dolor sit amet?</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate,
-          eius. Reiciendis nulla dignissimos consectetur, eaque aut in
-          voluptate, cum, assumenda dolor libero animi sit id voluptatibus
-          eveniet vitae similique minus.
-        </p>
-        <h2>Lorem ipsum dolor sit amet?</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate,
-          eius. Reiciendis nulla dignissimos consectetur, eaque aut in
-          voluptate, cum, assumenda dolor libero animi sit id voluptatibus
-          eveniet vitae similique minus.
-        </p>
+        <h2>Somos muchas amigas y queremos comprar en cantidad</h2>
+        <p>Vendemos al por mayor con seña previa.</p>
       </div>
     </main>
 
-    <footer>
-      <div class="container">
+    <div class="pie">
+      <div class="contenedor">
         <h3>Seguinos en nuestras redes</h3>
         <div class="f__iconos">
           <a href="https://www.instagram.com/indecisa.lp/?next=%2F"
@@ -85,6 +74,11 @@
           ></a>
         </div>
       </div>
-    </footer>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
