--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/estilos.css" />
     <link rel="shortcut icon" href="../img/logo2.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
     <script
       src="https://kit.fontawesome.com/2794029d4a.js"
       crossorigin="anonymous"
@@ -49,54 +55,54 @@
       <section class="contenido__main__tienda">
         <div class="articulo">
           <img src="../img/modelo1.jpg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Outfit casual 1</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
         <div class="articulo">
           <img src="../img/modelo2.jpg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Outfit casual 2</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
         <div class="articulo">
           <img src="../img/modelo3.jpg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Outfit noche</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
         <div class="articulo">
           <img src="../img/remera1.jpg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Musculosa rosa</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
         <div class="articulo">
           <img src="../img/remera2.jpg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Musculosa blanca larga</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
         <div class="articulo">
           <img src="../img/remera3.jpg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Musculosa blanca corta</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
         <div class="articulo">
           <img src="../img/remera4.jpg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Musculosa verde limon</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
         <div class="articulo">
           <img src="../img/remera5.jpg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Musculosa negra</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
         <div class="articulo">
           <img src="../img/remera6.jpeg" alt="" />
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Musculosa beige</p>
           <a class="comprar" href="../pages/tienda.html">Comprar</a>
         </div>
       </section>
     </main>
 
-    <footer>
-      <div class="container">
+    <div class="pie">
+      <div class="contenedor">
         <h3>Seguinos en nuestras redes</h3>
         <div class="f__iconos">
           <a href="https://www.instagram.com/indecisa.lp/?next=%2F"
@@ -108,6 +114,11 @@
           ></a>
         </div>
       </div>
-    </footer>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
