--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/estilos.css" />
     <link rel="shortcut icon" href="./img/logo2.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/estilos.css" />
     <script
       src="https://kit.fontawesome.com/2794029d4a.js"
       crossorigin="anonymous"
@@ -33,18 +39,75 @@
     </header>
 
     <main>
-      <section class="contenido__main">
-        <img src="./img/logo1.jpeg" alt="" />
-        <h2>Lorem, ipsum dolor.s</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat
-          accusantium deserunt nobis aliquam ut illo.
-        </p>
-      </section>
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/img1.jpg" class="d-block w-100" alt="..." />
+            <div class="color carousel-caption d-none d-md-block">
+              <h5>Shorts</h5>
+              <p>La combinación lo es todo.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./img/img2.png" class="d-block w-100" alt="..." />
+            <div class="color carousel-caption d-none d-md-block">
+              <h5>Outfits</h5>
+              <p>Con indecisa convinalos como vos quieras.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./img/img3.png" class="d-block w-100" alt="..." />
+            <div class="color carousel-caption d-none d-md-block">
+              <h5>Tops</h5>
+              <p>Para que cada noche sea tu noche.</p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </main>
 
-    <footer>
-      <div class="container">
+    <div class="pie">
+      <div class="contenedor">
         <h3>Seguinos en nuestras redes</h3>
         <div class="f__iconos">
           <a href="https://www.instagram.com/indecisa.lp/?next=%2F"
@@ -56,6 +119,11 @@
           ></a>
         </div>
       </div>
-    </footer>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
