--- a/index.html
+++ b/index.html
@@ -15,26 +15,57 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/estilos.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/compilado.css" />
     <script
       src="https://kit.fontawesome.com/2794029d4a.js"
       crossorigin="anonymous"
     ></script>
     <title>Indecisa</title>
+    <meta name="description" content="Indecisa, marca de ropa femenina para todos los cuerpos, para salir de noche o estar en casa.">
+    <meta name="keywords" content="ropa, indumentaria, femenina, mujeres, vestimenta, estilo, belleza">
   </head>
 
   <body>
     <header>
-      <a class="logo__header" href="index.html"
-        >Indecisa - Indumentaria femenina</a
-      >
-      <nav class="header__navbar">
-        <a class="header__items" href="./pages/tienda.html">Tienda</a>
-        <a class="header__items" href="./pages/carrito.html">Carrito</a>
-        <a class="header__items" href="./pages/nosotros.html">Nosotros</a>
-        <a class="header__items" href="./pages/preguntasfrecuentes.html"
-          >Preguntas frecuentes</a
-        >
+      <nav class="vw-100 navbar navbar-expand-lg navbar-light bg-light">
+        <div class="encabezado container-fluid">
+          <a class="navbar-brand" href="index.html"
+            >Indecisa - Indumentaria femenina</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="justify-content-end collapse navbar-collapse"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/tienda.html">Tienda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/preguntasfrecuentes.html"
+                  >Preguntas frecuentes</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
@@ -107,23 +138,34 @@
     </main>
 
     <div class="pie">
-      <div class="contenedor">
-        <h3>Seguinos en nuestras redes</h3>
-        <div class="f__iconos">
-          <a href="https://www.instagram.com/indecisa.lp/?next=%2F"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a
-            href="https://www.facebook.com/groups/1851096024938696/user/100002422833342/"
-            ><i class="fab fa-facebook"></i
-          ></a>
-        </div>
+      <div class="pie__estilos">
+        <h3>Indecisa</h3>
+        <a href="#">Trabaja con nosotros</a>
+        <a href="#">Programa de modelos</a>
+        <a href="#">Donde estamos</a>
+      </div>
+      <div class="pie__estilos">
+        <h3>Seguinos en nuestras redes!</h3>
+        <a href="https://www.facebook.com/rochii.piinchaa">Facebook</a>
+        <a href="https://www.instagram.com/indecisa.lp/?next=%2F">Instagram</a>
+        <a href="https://twitter.com/?lang=es">Twitter</a>
+      </div>
+      <div class="pie__estilos">
+        <h3>Desarrollado por</h3>
+        <a href="https://www.instagram.com/trianogerman/?next=%2F"
+          >© German Triano</a
+        >
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init({
+        duration: 1000,
+      });
+      </script>
+    </script>
   </body>
 </html>
