--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,10 +22,10 @@
       crossorigin="anonymous"
     ></script>
     <title>Indecisa</title>
-    <meta name="description" content="Preguntas frecuentes" />
+    <meta name="description" content="Contactate con nosotros" />
     <meta
       name="keywords"
-      content="ropa, ayuda, femenina, preguntas frecuentes, vestimenta, estilo, respuestas"
+      content="ropa, mensaje, femenina, mujeres, vestimenta, estilo, contacto"
     />
   </head>
 
@@ -53,16 +53,16 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="../pages/tienda.html">Tienda</a>
+                <a class="nav-link" href="./tienda.html">Tienda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/preguntasfrecuentes.html"
+                <a class="nav-link" href="./preguntasfrecuentes.html"
                   >Preguntas frecuentes</a
                 >
               </li>
@@ -73,37 +73,51 @@
     </header>
 
     <main>
-      <div class="preguntasFrecuentes">
-        <div data-aos="fade-right">
-          <h2>¿Hacen envios?</h2>
-          <p>Realizamos envios a todo el pais por medio de correo argentino.</p>
+      <section class="contacto">
+        <div class="contacto__formulario" data-aos="fade-right">
+          <h4>Mandanos tu mensaje</h4>
+          <input
+            class="controls"
+            type="text"
+            name="nombres"
+            id="nombres"
+            placeholder="Ingresa tu nombre"
+          />
+          <input
+            class="controls"
+            type="text"
+            name="apellidos"
+            id="apellidos"
+            placeholder="Ingresa tu apellido"
+          />
+          <input
+            class="controls"
+            type="email"
+            name="correo"
+            id="correo"
+            placeholder="Ingresa tu correo"
+          />
+          <textarea
+            name="introducir_mensaje"
+            class="texto_mensaje"
+            id="mensaje"
+            required="obligatorio"
+            placeholder="Escribi tu mensaje"
+          ></textarea>
+          <input class="botons" type="submit" value="Enviar" />
         </div>
-        <div data-aos="fade-left">
-          <h2>¿Que medios de pago aceptan?</h2>
-          <p>
-            Aceptamos tarjeta credito o debito, transferencia, efectivo o
-            cripto.
-          </p>
+        <div class="contacto__mapa" data-aos="fade-left">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52343.070307687456!2d-57.988189893619555!3d-34.92045289872986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e62b1f0085a1%3A0xbcfc44f0547312e3!2sLa%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1676024008036!5m2!1ses-419!2sar"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
-        <div data-aos="fade-right">
-          <h2>¿Donde puedo ver las prendas?</h2>
-          <p>
-            Tenemos showroom de Lunes a Viernes de 18 a 20hs y Sabados de 16 a
-            20hs.
-          </p>
-        </div>
-        <div data-aos="fade-left">
-          <h2>Tengo un enveto y no se que ponerme</h2>
-          <p>
-            No te preocupes, nosotras te ayudamos a que elegias el mejor outfit
-            para esa noche especial.
-          </p>
-        </div>
-        <div data-aos="fade-right">
-          <h2>Somos muchas amigas y queremos comprar en cantidad</h2>
-          <p>Vendemos al por mayor con seña previa.</p>
-        </div>
-      </div>
+      </section>
     </main>
 
     <div class="pie">
